# I-Simpa-STI

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
Source/: ToDo.txt
Source/UserScript/recp_multi_ang/: __ui_startup__.py
Source/UserScript/recp_multi_calc/: __ui_startup__.py
Source/UserScript/recp_res_tool/: __init__.py
Source/isimpa/trunk/: isimpaProj.vcproj
Source/isimpa/trunk/3dengine/Core/: Model3D.h  Objet3D.cpp  Objet3D_maillage.cpp  Recepteurs_surfacique.cpp  bin.cpp
Source/isimpa/trunk/coreSrc/lib_interface/: coreTypes.h  (+3 more)
Source/isimpa/trunk/data_manager/: appconfig.h  element.h  projet.cpp  projet.h  projet_calculation.cpp
Source/spps/trunk/: CalculationCore.cpp  sppsNantes.cpp  sppsNantes.vcproj  sppsTypes.h
Source/spps/trunk/Release/: mt.dep
Source/spps/trunk/data_manager/: core_configuration.cpp  core_configuration.h
Source/spps/trunk/input_output/: reportmanager.cpp  reportmanager.h
Source/theorie_classique/trunk/: TheorieClassique.vcproj
Source/theorie_classique/trunk/Release/: mt.dep
currentRelease/Bitmaps/: Sources_icones.txt
currentRelease/SystemScript/check_version/: __init__.py
currentRelease/SystemScript/job_tool/: __init__.py
currentRelease/SystemScript/recp_res_tool/: __init__.py
currentRelease/SystemScript/recp_tool/: __init__.py
currentRelease/UserScript/SppsReportSample/: __init__.py
currentRelease/UserScript/gabe2csv/: __init__.py  __ui_startup__.py  gabe2csv.py
currentRelease/UserScript/job_tool/: __init__.py
currentRelease/UserScript/recp_multi_ang/: __init__.py
currentRelease/UserScript/recp_multi_calc/: __init__.py
currentRelease/UserScript/recp_res_advanced_tool/: __init__.py  __ui_startup__.py
currentRelease/UserScript/recp_res_tool/: __init__.py
currentRelease/UserScript/recp_surf_stats/: __init__.py  __ui_startup__.py
currentRelease/libsimpa/: __init__.py
currentRelease/locale/en_US/: internat.mo  internat.po
currentRelease/locale/fr_FR/: internat.mo  internat.po
currentRelease/locale/pl_PL/: internat.po
src/UserScript/recp_res_tool/: __init__.py
src/VolumetricMeshRepair/: CMakeLists.txt
src/isimpa/: CMakeLists.txt
src/isimpa/3dengine/: OpenGlViewer.cpp
src/isimpa/3dengine/Core/: Model3D.h  Objet3D.cpp  Objet3D_maillage.cpp  Recepteurs_surfacique.cpp  bin.cpp  bin.h  stl.hpp
src/isimpa/IHM/: uiTreeCtrl.cpp
src/isimpa/IHM/customRenderer/: gridcellgabefloatrenderer.cpp
src/isimpa/data_manager/: appconfig.cpp  appconfig.h  e_data_file.h  e_data_row_materiau.h  element.cpp  element.h  projet.cpp  projet.h  projet_calculation.cpp  projet_maillage.cpp
src/isimpa/data_manager/customEditor/: wxGridCellFileEditor.h  wxGridCellTreeEditor.cpp
src/isimpa/data_manager/generic_element/: e_directivity.cpp  e_directivity_app.h  e_directivity_user.h
src/isimpa/data_manager/tree_core/: e_core.h  e_core_core_config.h  e_core_core_tetconf.h  e_core_sppsNee_agh_advanced.h  e_core_sppsNee_aghcore.h  e_core_spps_agh_advanced.h  e_core_spps_aghcore.h  e_core_spps_aghcore_advanced.h  e_core_sppscore.h
src/isimpa/data_manager/tree_rapport/: e_report_recepteurssvisualisation.h
src/isimpa/data_manager/tree_scene/: e_scene.cpp  e_scene_bdd_directivities_app.h  e_scene_bdd_directivities_user.h  e_scene_bdd_materiaux_propmateriau_adv.cpp  e_scene_bdd_materiaux_propmateriau_adv.h  e_scene_bdd_materiaux_user.h  e_scene_bdd_materiaux_user_group.h  e_scene_bdd_materiaux_user_materiau.h  e_scene_groupesurfaces_groupe.cpp  e_scene_projet_configuration.h  e_scene_recepteurss_recepteur.h  e_scene_recepteurss_recepteur_proprietes.h
src/isimpa/lang/fr/: internat.po
src/isimpa/lang/pl/: internat.po
src/isimpa/main/: i_simpa_main.cpp  i_simpa_main.h
src/isimpa/manager/: processManager.cpp
src/lib_interface/: CMakeLists.txt  coreTypes.cpp  coreTypes.h  coreinitialisation.cpp
src/lib_interface/Core/: mathlib.cpp  mathlib.h
src/lib_interface/data_manager/: base_core_configuration.cpp  base_core_configuration.h
src/lib_interface/input_output/: bin.cpp  bin.h  progressionInfo.h
src/lib_interface/input_output/brdfs/: brdfBalloon.cpp  brdfBalloon.h  brdfParser.cpp  brdfParser.h
src/lib_interface/input_output/exportRecepteurSurf/: rsbin.h
src/preprocess/: CMakeLists.txt
src/python_bindings/: CMakeLists.txt
src/spps/: CMakeLists.txt  CalculationCore.cpp  CalculationCore.h  sppsNantes.cpp  sppsTypes.h
src/spps-agh/: CMakeLists.txt  CalculationCore.cpp  CalculationCore.h  CalculationCoreAGH.cpp  CalculationCoreAGH.h  sppsAGH.cpp  sppsAGHInitialisation.cpp  sppsAGHTypes.cpp  sppsAGHTypes.h  sppsNeeAGH.cpp  sppsNeeAGHTypes.h
src/spps-agh/calculation_cores/: MLTCore.cpp  MLTCore.h  NextEventEstimationCore.cpp  NextEventEstimationCore.h
src/spps-agh/data_manager/: core_configuration.cpp  core_configuration.h  core_configurationAGH.cpp  core_configurationAGH.h  core_configuration_AGH.cpp
src/spps-agh/input_output/: reportmanager.cpp  reportmanager.h  reportmanagerAGH.cpp  reportmanagerAGH.h
src/spps-agh/tests/: spps_agh_core_test.cpp  spps_agh_core_test.h
src/spps-agh/tools/: brdfreflection.cpp  brdfreflection.h  dotdistribution.h  dotreflectionAGH.h
src/spps/data_manager/: core_configuration.cpp  core_configuration.h
src/spps/input_output/: reportmanager.cpp  reportmanager.h
src/spps/tools/: dotreflection.h
src/sppsNee-agh/: CMakeLists.txt  CalculationCore.cpp  CalculationCore.h  CalculationCoreAGH.cpp  CalculationCoreAGH.h  sppsNeeAGH.cpp  sppsNeeAGHInitialisation.cpp  sppsNeeAGHTypes.cpp  sppsNeeAGHTypes.h
src/sppsNee-agh/calculation_cores/: MLTCore.cpp  MLTCore.h  NextEventEstimationCore.cpp  NextEventEstimationCore.h
src/sppsNee-agh/data_manager/: core_configuration.cpp  core_configuration.h  core_configurationAGH.cpp  core_configurationAGH.h  core_configuration_AGH.h
src/sppsNee-agh/input_output/: reportmanager.cpp  reportmanager.h  reportmanagerAGH.cpp  reportmanagerAGH.h
src/sppsNee-agh/tools/: brdfreflection.cpp  brdfreflection.h  dotdistribution.h  dotreflection.h  dotreflectionAGH.h
src/tetgen16/: CMakeLists.txt
src/theorie_classique/: CMakeLists.txt
(+31 files in other folders)
